@@ -244,6 +244,18 @@ begin_import
 import|import static
 name|org
 operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|fail
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
 name|mockito
 operator|.
 name|Mockito
@@ -664,6 +676,107 @@ operator|.
 name|checkDirs
 argument_list|()
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testReleaseVolumeRefIfNoBlockScanner ()
+specifier|public
+name|void
+name|testReleaseVolumeRefIfNoBlockScanner
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|FsVolumeList
+name|volumeList
+init|=
+operator|new
+name|FsVolumeList
+argument_list|(
+name|Collections
+operator|.
+expr|<
+name|VolumeFailureInfo
+operator|>
+name|emptyList
+argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+name|blockChooser
+argument_list|)
+decl_stmt|;
+name|File
+name|volDir
+init|=
+operator|new
+name|File
+argument_list|(
+name|baseDir
+argument_list|,
+literal|"volume-0"
+argument_list|)
+decl_stmt|;
+name|volDir
+operator|.
+name|mkdirs
+argument_list|()
+expr_stmt|;
+name|FsVolumeImpl
+name|volume
+init|=
+operator|new
+name|FsVolumeImpl
+argument_list|(
+name|dataset
+argument_list|,
+literal|"storage-id"
+argument_list|,
+name|volDir
+argument_list|,
+name|conf
+argument_list|,
+name|StorageType
+operator|.
+name|DEFAULT
+argument_list|)
+decl_stmt|;
+name|FsVolumeReference
+name|ref
+init|=
+name|volume
+operator|.
+name|obtainReference
+argument_list|()
+decl_stmt|;
+name|volumeList
+operator|.
+name|addVolume
+argument_list|(
+name|ref
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|ref
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Should throw exception because the reference is closed in "
+operator|+
+literal|"VolumeList#addVolume()."
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalStateException
+name|e
+parameter_list|)
+block|{     }
 block|}
 block|}
 end_class
